[project]
name = "citation-report"
version = "0.2.0"
description = "Regex formula of Philippine Supreme Court citations in report format, i.e. SCRA, PHIL, OFFG."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "citation-date >= 0.2.1",
    "pydantic >= 2.13.0",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    # docs
    "zensical >= 0.0.50",
    # notebook examples
    "marimo >= 0.23.14",
    "polars >= 1.42.1",
    # testing
    "pytest >= 9.1",
    "pytest-cov >= 7.1",
]

[tool.pytest.ini_options]
minversion = "8.4"
addopts = "-ra -q --cov=citation_report --cov-branch --doctest-modules"
testpaths = ["tests", "src/citation_report"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["F401", "F403"]
fixable = ["F", "E", "W", "I001"]
select = ["F", "E", "W", "I001"]
